examples/test/testpolicy3035.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3035
  namespace: namespace275
spec:
  podSelector:
    matchLabels:
      key19: value11
      key1: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value38
          key43: value19
      podSelector:
        matchLabels:
          key30: value9
          key36: value44
          key18: value14
